bk_ida/gccida/c2/c_expand_start_else
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/c_expand_start_else/src/c-common.c:806:6: error: use of undeclared identifier 'if_stack_0'; did you mean 'if_stack'?
v1 = if_stack_0; 
     ^~~~~~~~~~
     if_stack
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/c_expand_start_else/src/c-common.c:262:16: note: 'if_stack' declared here
static if_elt *if_stack;
               ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/c_expand_start_else/src/c-common.c:812:6: error: use of undeclared identifier 'if_stack_0'; did you mean 'if_stack'?
if ( if_stack_0[( unsigned int)v0].compstmt_count == if_stack_0[v2].compstmt_count ) 
     ^~~~~~~~~~
     if_stack
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/c_expand_start_else/src/c-common.c:262:16: note: 'if_stack' declared here
static if_elt *if_stack;
               ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/c_expand_start_else/src/c-common.c:812:54: error: use of undeclared identifier 'if_stack_0'; did you mean 'if_stack'?
if ( if_stack_0[( unsigned int)v0].compstmt_count == if_stack_0[v2].compstmt_count ) 
                                                     ^~~~~~~~~~
                                                     if_stack
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/c_expand_start_else/src/c-common.c:262:16: note: 'if_stack' declared here
static if_elt *if_stack;
               ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/c_expand_start_else/src/c-common.c:813:1: error: use of undeclared identifier 'if_stack_0'; did you mean 'if_stack'?
if_stack_0[v2].needs_warning = 1; 
^~~~~~~~~~
if_stack
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/c_expand_start_else/src/c-common.c:262:16: note: 'if_stack' declared here
static if_elt *if_stack;
               ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/c_expand_start_else/src/obj/c-common.o] Error 1
